# sole

./: .gitignore  .gitmodules  CMakeLists.txt  sole.cpp  sole.hpp  use.cmake
cmake/: clean_slate.cmake
